add warehouse completion
